[package]
name = "delegation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.7.14"
hex = "0.4.3"
ic-agent = { git = "https://github.com/flyq/agent-rs" }
ic-types = { git = "https://github.com/dfinity/ic" }

tokio = { version = "1.17.0", features = ["full"] }